# rust-os

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
serial/: Cargo.toml
serial/src/: lib.rs
src/: lib.rs  main.rs
tests/: basic_boot.rs  should_panic.rs
vga_buffer/: Cargo.toml
vga_buffer/.cargo/: config.toml
vga_buffer/src/: lib.rs
